--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,37 @@ THE POSSIBILITY OF SUCH DAMAGE.
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.11</version>
+        <configuration>
+          <useDefaultExcludes>true</useDefaultExcludes>
+          <header>LICENSE</header>
+          <aggregate>true</aggregate>
+          <properties>
+            <owner>Isak Karlsson</owner>
+            <email>isak.karlsson@gmail.com</email>
+          </properties>
+          <includes>
+            <include>**/*.java</include>
+          </includes>
+          <excludes>
+            <exclude>**/README</exclude>
+            <exclude>docs/**</exclude>
+            <exclude>src/test/resources/**</exclude>
+            <exclude>src/main/resources/**</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
